crystal-facet-uml (1.45.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * On model changes, diffs on json data file are smaller (new sort order)
  * search for empty fields omits stereo/value types: these are often empty

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 19 Dec 2022 11:00:00 +0200

crystal-facet-uml (1.44.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Find-Occurrence button added for faster navigation in the model

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 12 Nov 2022 11:00:00 +0200

crystal-facet-uml (1.43.2) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * License of file metainfo.xml changed from MIT to CC0-1.0

 -- Andreas Warnke <cfu@andreaswarnke.de>  Wed, 02 Nov 2022 20:30:00 +0200

crystal-facet-uml (1.43.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Typos fixed as proposed by Mike Gabriel

 -- Andreas Warnke <cfu@andreaswarnke.de>  Tue, 01 Nov 2022 06:00:00 +0200

crystal-facet-uml (1.43.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Timing and sequence diagrams do not show a 2d snap region while dragging
  * Errors at parsing json are shown to user including the line of occurrence
  * In case of errors at opening json fies, the temp file is removed again
  * specific error message in case of read-only parent directories added
  * json export omits ids of linked objects, only uuids are exported
  * subsystems/boundaries and interruptable regions can have features

 -- Andreas Warnke <cfu@andreaswarnke.de>  Tue, 01 Nov 2022 05:00:00 +0200

crystal-facet-uml (1.42.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * relationships connecting ports to inner sub-components avoid parent border
  * relationships: fine tuning straight lines and centered-preference
  * relationships: search for good free spaces avoids crossings; stats from
    layout_good_cases: ERR=0, W/C=7, W/F=167, W/R=59
    layout_challenging_cases: ERR=64, W/C=8033, W/F=8379, W/R=5408
    improved to