@@ -12,7 +12,7 @@
             User documentation is available here:
             <itemizedlist>
             <listitem><para><ulink url="https://andreaswarnke.de/crystal-facet-uml/crystal-facet-uml_documentation.pdf"/></para></listitem>
-            <listitem><para><ulink url="https://github.com/awarnke/crystal-facet-uml/blob/master/user_doc/crystal-facet-uml_documentation.pdf"/></para></listitem>
+            <listitem><para><ulink url="https://andreaswarnke.de/crystal-facet-uml/html/index.html"/></para></listitem>
             </itemizedlist>
         </para>
     </section>
